<resources>
    <string name="app_name">Get Fit</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
    <string name="youremail_gmail_com">youremail@gmail.com</string>
    <string name="john_doe">John Doe</string>
    <string name="full_name">Full Name:</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="add_meal">Add meal</string>
    <string name="_0_kg">0 kg</string>
    <string name="_0">0</string>
    <string name="_0_cal">0 Kcal</string>
    <string name="calories">Calories:</string>
    <string name="bmi">BMI:</string>
    <string name="_0_m">0 m</string>
    <string name="add_weight">Add weight</string>
    <string name="history">History</string>
    <string name="insert_meal">Insert Meal</string>
    <string name="calculate">Calculate</string>
    <string name="calculated_calories_consumption">Calculated calories consumption:</string>
    <string name="enter_the_name_of_the_food">Enter the name of the food:</string>
    <string name="enter_the_consumed_amount">Enter the consumed amount:</string>
    <string name="ex_250">Ex.: 250</string>
    <string name="gramms">gramms</string>
    <string name="ex_apple">Ex.: apple</string>
    <string name="add">Add</string>
    <string name="_0_0">0.0</string>
    <string name="new_bmi">New BMI:</string>
    <string name="ex_75">Ex.: 75</string>
    <string name="enter_new_weight">Enter new weight:</string>
    <string name="old_weight">Old weight:</string>
    <string name="old_bmi">Old BMI:</string>
    <string name="insert_weight">Insert Weight</string>
    <string name="weight_history">Weight History</string>
</resources>