<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.InsertWeightActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="410dp"
        android:layout_height="69dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/back_history_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="345dp"
            android:layout_marginRight="345dp"
            android:layout_marginBottom="14dp"
            android:onClick="backToProfile"
            android:background="@drawable/baseline_arrow_back_ios_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView23"
        android:layout_width="153dp"
        android:layout_height="30dp"
        android:layout_marginStart="129dp"
        android:layout_marginLeft="129dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="129dp"
        android:layout_marginRight="129dp"
        android:fontFamily="@font/courgette"
        android:gravity="center"
        android:text="@string/insert_weight"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <TextView
        android:id="@+id/old_weight"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="75dp"
        android:text="@string/_0_kg"
        app:layout_constraintStart_toEndOf="@+id/textView24"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/old_bmi"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="6dp"
        android:text="@string/_0_0"
        app:layout_constraintStart_toEndOf="@+id/textView26"
        app:layout_constraintTop_toBottomOf="@+id/old_weight" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="138dp"
        android:layout_marginLeft="138dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/old_bmi"
        app:layout_constraintEnd_toStartOf="@+id/old_bmi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/old_weight"
        app:layout_constraintEnd_toStartOf="@+id/old_weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="196dp"
        android:layout_marginRight="196dp"
        android:text="@string/enter_new_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/old_bmi" />

    <EditText
        android:id="@+id/new_weight_inp"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/ex_75"
        android:inputType="numberSigned"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="102dp"
        android:layout_marginRight="102dp"
        android:text="@string/kg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/new_weight_inp"
        app:layout_constraintTop_toBottomOf="@+id/old_bmi" />

    <Button
        android:id="@+id/button"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginEnd="102dp"
        android:layout_marginRight="102dp"
        android:layout_marginBottom="188dp"
        android:onClick="insertWeight"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/main_button"
        android:textColor="@color/ButtonText"/>



</androidx.constraintlayout.widget.ConstraintLayout>