<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.InsertMealActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="153dp"
        android:layout_height="30dp"
        android:layout_marginStart="129dp"
        android:layout_marginLeft="129dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="129dp"
        android:layout_marginRight="129dp"
        android:fontFamily="@font/courgette"
        android:gravity="center"
        android:text="@string/insert_meal"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="410dp"
        android:layout_height="69dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/back_history_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="345dp"
            android:layout_marginRight="345dp"
            android:layout_marginBottom="14dp"
            android:onClick="backToProfile"
            android:background="@drawable/baseline_arrow_back_ios_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/food_name_input"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/ex_apple"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:text="@string/gramms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_name_input" />

    <EditText
        android:id="@+id/food_amount_inp"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:ems="10"
        android:hint="@string/ex_250"
        android:inputType="numberSigned"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="152dp"
        android:layout_marginRight="152dp"
        android:text="@string/enter_the_consumed_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_name_input" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="161dp"
        android:layout_marginRight="161dp"
        android:text="@string/enter_the_name_of_the_food"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="131dp"
        android:layout_marginRight="131dp"
        android:gravity="center"
        android:text="@string/calculated_calories_consumption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_amount_inp" />

    <TextView
        android:id="@+id/cal_consumption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="179dp"
        android:layout_marginLeft="179dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="172dp"
        android:layout_marginRight="172dp"
        android:text="@string/_0_cal"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <Button
        android:id="@+id/calc_cal_btn"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:layout_marginStart="115dp"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:background="@drawable/main_button"
        android:onClick="insertMeal"
        android:text="@string/calculate"
        android:textColor="@color/ButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cal_consumption" />

</androidx.constraintlayout.widget.ConstraintLayout>