<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginStart="118dp"
        android:layout_marginLeft="118dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="118dp"
        android:layout_marginRight="118dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/getfit_logo" />

    <Button
        android:id="@+id/submit_log_btn"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginStart="118dp"
        android:layout_marginLeft="118dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="118dp"
        android:layout_marginRight="118dp"
        android:layout_marginBottom="145dp"
        android:background="@drawable/main_button"
        android:onClick="loginUser"
        android:text="@string/login"
        android:textColor="@color/ButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="412dp"
        android:layout_height="209dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/submit_reg_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <EditText
            android:id="@+id/login_email_input"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="82dp"
            android:layout_marginRight="82dp"
            android:layout_marginBottom="11dp"
            android:textSize="15sp"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/login_pass_input"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="82dp"
            android:layout_marginRight="82dp"
            android:layout_marginBottom="29dp"
            android:textSize="15sp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="294dp"
            android:layout_marginRight="294dp"
            android:text="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="266dp"
            android:layout_marginRight="266dp"
            android:text="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_email_input" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>